--- a/roles/prometheus/templates/sysconfig.j2
+++ b/roles/prometheus/templates/sysconfig.j2
@@ -1,1 +1,1 @@
-OPTIONS="--config.file={{ prometheus.config_path }} --storage.tsdb.path={{ prometheus.tsdb_path }} {{ prometheus.other_options }}"
+OPTIONS="--config.file={{ prometheus_config_path }} --storage.tsdb.path={{ prometheus_tsdb_path }} {{ prometheus_other_options }}"
