--- a/roles/node_exporter/templates/service.j2
+++ b/roles/node_exporter/templates/service.j2
@@ -1,5 +1,5 @@
 [Unit]
-Description=Prometheus Node exporter v {{ node_exporter.version }}
+Description=Prometheus Node exporter v {{ node_exporter_version }}
 Documentation=https://github.com/prometheus/node_exporter
 
 [Service]
